--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "filip@prozor.org",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "@mysql/xdevapi": "^8.0.28",
+    "express": "^4.17.3",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
