--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mysql/xdevapi": "^8.0.28",
     "express": "^4.17.3",
+    "express-handlebars": "^6.0.5",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
