--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "development for node foloving the book about node.js web development",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "node"
